--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-tsrouter-app"
+      content="AI-HR platform by one-zero-eight"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo.jpg" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - frontend</title>
+    <title>AI-HR one-zero-eight</title>
   </head>
   <body>
     <div id="app"></div>
